--- a/cxx/src/lib/CMakeLists.txt
+++ b/cxx/src/lib/CMakeLists.txt
@@ -5,6 +5,7 @@ add_subdirectory(seispp)
 
 add_library(pwmig $<TARGET_OBJECTS:dsap> $<TARGET_OBJECTS:gclgrid> $<TARGET_OBJECTS:pwmigcore> $<TARGET_OBJECTS:seispp> )
 target_link_libraries(pwmig PRIVATE ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES}  ${PYTHON_LIBRARIES} ${GSL_LIBRARIES} OpenMP::OpenMP_CXX ${MSPASS_LIBRARIES})
+target_include_directories(pwmig PRIVATE ${Boost_INCLUDE_DIRS})
 
 install (TARGETS pwmig DESTINATION lib)
 
