Check in a set of CMakeLists.txt files that allowed me to build this package on a test ubuntu machine running buntu 6.8.0-85-generic #85~22.04.1-Ubuntu
This configuration is know to work ONLY IF boost is installed independently
in some directory outside the package build area AND mspass is compiled
and linked against the same set of files.   Linking independently compiled
of even the same version does not seem to work.  To make this work these
environment variables need to be set:
CMAKE_INSTALL_PREFIX
Boost_DIR
Boost_INCLUDE_DIRS

In addition it is more efficient to point at the mspass directory
wher gsl is installed by settting GSL_ROOT_DIR

--- a/cxx/python/gclgrid/CMakeLists.txt
+++ b/cxx/python/gclgrid/CMakeLists.txt
@@ -2,20 +2,21 @@ include_directories(
   ${Boost_INCLUDE_DIRS}
   ${GSL_INCLUDE_DIRS}
   ${pylib11_INCLUDE_DIRS}
-  ${PYTHON_INCLUDE_DIRS}
+  ${Python_INCLUDE_DIRS}
   $ENV{MSPASS_HOME}/include
   ${PROJECT_SOURCE_DIR}/include
   ${PROJECT_SOURCE_DIR}
   ${PROJECT_BINARY_DIR}/include)
 
 
-#pybind11_add_module(pygclgrid gclgrid_py.cc)
-Python_add_library(pygclgrid gclgrid_py.cc)
+pybind11_add_module(pygclgrid gclgrid_py.cc)
+#Python_add_library(pygclgrid gclgrid_py.cc)
 
 target_link_libraries(pygclgrid PRIVATE pwmig 
   $ENV{MSPASS_HOME}/lib/libmspass.a 
   ${Boost_LIBRARIES}
-  pybind11::headers)
+  pybind11::headers
+  ${Boost_LIBRARIES})
 set_target_properties(pygclgrid PROPERTIES OUTPUT_NAME "gclgrid")
 if(DEFINED CMAKE_LIBRARY_OUTPUT_DIRECTORY)
   set_target_properties(pygclgrid PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/ccore)
