--- a/cxx/python/gclgrid/CMakeLists.txt
+++ b/cxx/python/gclgrid/CMakeLists.txt
@@ -2,7 +2,7 @@ include_directories(
   ${Boost_INCLUDE_DIRS}
   ${GSL_INCLUDE_DIRS}
   ${pylib11_INCLUDE_DIRS}
-  ${PYTHON_INCLUDE_DIRS}
+  ${Python_INCLUDE_DIRS}
   $ENV{MSPASS_HOME}/include
   ${PROJECT_SOURCE_DIR}/include
   ${PROJECT_SOURCE_DIR}
@@ -10,9 +10,12 @@ include_directories(
 
 
 pybind11_add_module(pygclgrid gclgrid_py.cc)
+#Python_add_library(pygclgrid gclgrid_py.cc)
 
 target_link_libraries(pygclgrid PRIVATE pwmig 
   $ENV{MSPASS_HOME}/lib/libmspass.a 
+  ${Boost_LIBRARIES}
+  pybind11::headers
   ${Boost_LIBRARIES})
 set_target_properties(pygclgrid PROPERTIES OUTPUT_NAME "gclgrid")
 if(DEFINED CMAKE_LIBRARY_OUTPUT_DIRECTORY)
