--- a/cxx/python/seispp/CMakeLists.txt
+++ b/cxx/python/seispp/CMakeLists.txt
@@ -2,7 +2,7 @@ include_directories(
   ${Boost_INCLUDE_DIRS}
   ${GSL_INCLUDE_DIRS}
   ${pylib11_INCLUDE_DIRS}
-  ${PYTHON_INCLUDE_DIRS}
+  ${Python_INCLUDE_DIRS}
   $ENV{MSPASS_HOME}/include
   ${PROJECT_SOURCE_DIR}/include
   ${PROJECT_SOURCE_DIR}
@@ -10,10 +10,13 @@ include_directories(
 
 
 pybind11_add_module(pyseispp seispp_py.cc)
+#Python_add_library(pyseispp seispp_py.cc)
 
 target_link_libraries(pyseispp PRIVATE pwmig 
   $ENV{MSPASS_HOME}/lib/libmspass.a 
-  ${Boost_LIBRARIES})
+  ${Boost_LIBRARIES}
+  pybind11::headers)
+
 set_target_properties(pyseispp PROPERTIES OUTPUT_NAME "seispp")
 if(DEFINED CMAKE_LIBRARY_OUTPUT_DIRECTORY)
   set_target_properties(pyseispp PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/ccore)
